2012-06-11  Roland McGrath  <roland@hack.frob.com>

	[BZ #14218]
	* manual/argp.texi (Argp): Reword argp_parse description slightly.

2012-06-09  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/sh/sh4/fpu/bits/fenv.h (__FE_UNDEFINED): Define.
	(FE_UPWARD, FE_DOWNWARD): Don't define.
	* sysdeps/sh/sh4/fpu/fegetround.c (fegetround): Adapt to that.
	* sysdeps/sh/sh4/fpu/fesetround.c (fesetround): Likewise.

	* sysdeps/sh/sh4/fpu/fegetenv.c (fegetenv): Do not re-write fpscr after
	reading it.
	* sysdeps/sh/sh4/fpu/fegetexcept.c (fegetexcept): Likewise.
	* sysdeps/sh/sh4/fpu/ftestexcept.c (fetestexcept): Likewise.

2012-06-09  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/nptl/ld.abilist: New file.
	* sysdeps/unix/sysv/linux/sh/nptl/libc.abilist: Refreshed.
	* sysdeps/unix/sysv/linux/sh/nptl/libm.abilist: Refreshed.
	* sysdeps/unix/sysv/linux/sh/nptl/librt.abilist: Refreshed.

2012-06-06  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/i386/fpu/bits/fenv.h: Removed.
	* sysdeps/i386/fpu/Implies: New file.
	* sysdeps/x86_64/fpu/Implies: Likewise.
	* sysdeps/x86_64/fpu/bits/fenv.h: Renamed to ...
	* sysdeps/x86/fpu/bits/fenv.h: This.

	* sysdeps/x86_64/fpu/bits/fenv.h (feraiseexcept): Check
	__SSE_MATH__.

2012-06-06  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14134]
	* iconvdata/ibm930.c (BODY) [FROM_LOOP]: Check for invalid
	character 0xffff that matches the last element of the
	conversion table.

2012-06-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/e_fmodl.c: Fix for wrong ldbl128-ibm
	fmodl commit.

2012-06-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/s_erfl.c: Fix spurious underflow for
	values higher than 25.6283.

2012-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/e_fmodl.c (__ieee754_fmodl): Fix
	subnormal exponent extraction and add some __builtin_expect.